Move hardcoded production settings to environment variables
- cookie.secure, CORS origins, OAuth2 redirect URI, frontend redirect URL
  now driven by env vars with local-dev defaults
- docker-compose.yml injects production values for these vars
- Gateway CORS, server port, Redis host/port also made configurable
- Fix SecurityConfig to use servlet-layer CorsConfigurationSource (not reactive)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>